--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,20 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, {"extensions": [".js",".jsx",".ts",".tsx"] }],
+        "react/jsx-one-expression-per-line": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-indent": "off",
+        "linebreak-style": 0,
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+        ]
     }
 }
